--- a/commerce_ingenico_gc.info.yml
+++ b/commerce_ingenico_gc.info.yml
@@ -1,6 +1,6 @@
 name: Commerce Ingenico ePayments GlobalConnect
 type: module
-description: 'Provides payment gateway for Commerce Ingenico ePayments GlobalConnect'
+description: 'Provides payment gateway for Ingenico ePayments GlobalConnect'
 package: Commerce
 core: 8.x
 dependencies:
